--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tidbcloud-ai",
+  "name": "tidb-for-ai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "prismjs": "^1.30.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
