--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.13",
     "framer-motion": "^10.16.16",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.294.0",
@@ -17,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.6",
     "reading-time": "^1.5.0",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
