--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@xyflow/react": "^12.8.5",
     "framer-motion": "^10.16.16",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.294.0",
@@ -18,6 +19,7 @@
     "react-dom": "^18",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.6",
+    "reactflow": "^11.11.4",
     "reading-time": "^1.5.0",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
